#!/usr/bin/env python3
"""
æ¨¡æ‹Ÿ gRPC æœåŠ¡å™¨ - ç”¨äºå¿«é€Ÿæµ‹è¯•
ä¸éœ€è¦å®Œæ•´çš„ proto ç¼–è¯‘ï¼Œç›´æ¥æä¾› HTTP/REST å…¼å®¹æ¥å£
"""

from http.server import HTTPServer, BaseHTTPRequestHandler
import json
import random
from datetime import datetime
import threading
import time

class MockGRPCHandler(BaseHTTPRequestHandler):
    """æ¨¡æ‹Ÿ gRPC-Web å…¼å®¹çš„ HTTP å¤„ç†å™¨"""
    
    def do_POST(self):
        """å¤„ç† POST è¯·æ±‚"""
        content_length = int(self.headers.get('Content-Length', 0))
        body = self.rfile.read(content_length) if content_length > 0 else b''
        
        path = self.path
        print(f"ğŸ“¨ æ”¶åˆ°è¯·æ±‚: {path}")
        
        # å¤„ç†ä¸åŒçš„ gRPC æ–¹æ³•
        if 'GetHealthStatistics' in path:
            self.handle_health_statistics()
        elif 'SubscribeHealthStatus' in path:
            self.handle_subscribe()
        elif 'GetRealtimeAlerts' in path:
            self.handle_realtime_alerts()
        else:
            self.send_error(404, f"Unknown method: {path}")
    
    def do_GET(self):
        """å¤„ç† GET è¯·æ±‚ï¼ˆç”¨äºå¥åº·æ£€æŸ¥ï¼‰"""
        if self.path == '/health':
            self.send_response(200)
            self.send_header('Content-type', 'application/json')
            self.end_headers()
            self.wfile.write(json.dumps({'status': 'ok'}).encode())
        else:
            self.send_error(404)
    
    def do_OPTIONS(self):
        """å¤„ç† OPTIONS è¯·æ±‚ï¼ˆCORS é¢„æ£€ï¼‰"""
        self.send_response(200)
        self.send_cors_headers()
        self.end_headers()
    
    def send_cors_headers(self):
        """å‘é€ CORS å¤´"""
        self.send_header('Access-Control-Allow-Origin', '*')
        self.send_header('Access-Control-Allow-Methods', 'POST, GET, OPTIONS')
        self.send_header('Access-Control-Allow-Headers', 'Content-Type, x-grpc-web, x-user-agent')
        self.send_header('Access-Control-Expose-Headers', 'grpc-status, grpc-message')
    
    def handle_health_statistics(self):
        """è¿”å›å¥åº·ç»Ÿè®¡æ•°æ®"""
        data = {
            'totalNodes': 150,
            'normalNodes': 120,
            'warningNodes': 20,
            'errorNodes': 8,
            'criticalNodes': 2,
            'offlineNodes': 0,
            'overallHealthScore': 85.5,
            'perCarExceptionCounts': [
                {'carId': i, 'exceptionCount': 0 if i <= 5 else (i - 5)}
                for i in range(1, 9)
            ]
        }
        
        self.send_response(200)
        self.send_cors_headers()
        self.send_header('Content-type', 'application/json')
        self.send_header('grpc-status', '0')
        self.end_headers()
        self.wfile.write(json.dumps(data).encode())
        print(f"âœ“ è¿”å›å¥åº·ç»Ÿè®¡æ•°æ®")
    
    def handle_subscribe(self):
        """è¿”å›è®¢é˜…æ•°æ®ï¼ˆæ¨¡æ‹Ÿæµå¼å“åº”ï¼‰"""
        # ç®€åŒ–ç‰ˆï¼šè¿”å›å•ä¸ªå“åº”
        data = {
            'markerHealth': {
                'nodeId': random.randint(1, 150),
                'carId': random.randint(1, 8),
                'healthStatus': random.choice(['NORMAL', 'WARNING', 'ERROR'])
            }
        }
        
        self.send_response(200)
        self.send_cors_headers()
        self.send_header('Content-type', 'application/json')
        self.send_header('grpc-status', '0')
        self.end_headers()
        self.wfile.write(json.dumps(data).encode())
        print(f"âœ“ è¿”å›è®¢é˜…æ•°æ®")
    
    def handle_realtime_alerts(self):
        """è¿”å›å®æ—¶å‘Šè­¦"""
        alerts = [
            {
                'time': datetime.now().strftime('%H:%M'),
                'type': random.choice(['åœ°é¢ä¸å¹³', 'äºŒç»´ç æ±¡æŸ', 'é—´è·ä¸å‡†', 'äºŒç»´ç è´´æ­ª']),
                'location': f'è·¯å¾„P-{random.randint(1, 20)}',
                'vehicles': f'AGV-{random.randint(1, 8):02d}',
                'level': random.choice(['high', 'medium', 'low'])
            }
            for _ in range(3)
        ]
        
        self.send_response(200)
        self.send_cors_headers()
        self.send_header('Content-type', 'application/json')
        self.send_header('grpc-status', '0')
        self.end_headers()
        self.wfile.write(json.dumps({'alerts': alerts}).encode())
        print(f"âœ“ è¿”å› {len(alerts)} æ¡å‘Šè­¦")
    
    def log_message(self, format, *args):
        """ç¦ç”¨é»˜è®¤æ—¥å¿—"""
        pass

def run_server(port=50051):
    """å¯åŠ¨æœåŠ¡å™¨"""
    server_address = ('', port)
    httpd = HTTPServer(server_address, MockGRPCHandler)
    
    print("=" * 50)
    print(f"ğŸš€ æ¨¡æ‹Ÿ gRPC æœåŠ¡å™¨å·²å¯åŠ¨")
    print(f"ğŸ“¡ ç›‘å¬ç«¯å£: {port}")
    print("=" * 50)
    print("")
    print("æä¾›çš„æ¥å£:")
    print("  - POST /SiteHealthService/GetHealthStatistics")
    print("  - POST /SiteHealthService/SubscribeHealthStatus")
    print("  - POST /SiteHealthService/GetRealtimeAlerts")
    print("  - GET  /health (å¥åº·æ£€æŸ¥)")
    print("")
    print("æŒ‰ Ctrl+C åœæ­¢æœåŠ¡å™¨")
    print("=" * 50)
    
    try:
        httpd.serve_forever()
    except KeyboardInterrupt:
        print("\nğŸ‘‹ æœåŠ¡å™¨å·²åœæ­¢")
        httpd.shutdown()

if __name__ == '__main__':
    run_server()
