#!/usr/bin/env python3
"""
HTTP REST API æœåŠ¡å™¨
é€‚ç”¨äº Web å®¢æˆ·ç«¯ï¼Œæ— éœ€ gRPC-Web ä»£ç†
"""

from http.server import HTTPServer, BaseHTTPRequestHandler
import json
from datetime import datetime

class APIHandler(BaseHTTPRequestHandler):
    
    def _set_headers(self, status=200):
        self.send_response(status)
        self.send_header('Content-type', 'application/json')
        # CORS æ”¯æŒ
        self.send_header('Access-Control-Allow-Origin', '*')
        self.send_header('Access-Control-Allow-Methods', 'GET, POST, OPTIONS')
        self.send_header('Access-Control-Allow-Headers', 'Content-Type')
        self.end_headers()
    
    def do_OPTIONS(self):
        """å¤„ç† CORS é¢„æ£€è¯·æ±‚"""
        self._set_headers()
    
    def do_GET(self):
        """å¤„ç† GET è¯·æ±‚"""
        
        if self.path == '/api/health/statistics':
            # å¥åº·ç»Ÿè®¡
            data = {
                'totalNodes': 150,
                'healthyNodes': 120,
                'warningNodes': 20,
                'errorNodes': 8,
                'offlineNodes': 2,
            }
            self._set_headers()
            self.wfile.write(json.dumps(data).encode())
        
        elif self.path == '/api/sites':
            # åœºåœ°åˆ—è¡¨
            data = {
                'sites': [
                    {
                        'id': 'site1',
                        'name': 'åŒ—äº¬ç«™ç‚¹',
                        'location': 'åŒ—äº¬å¸‚æœé˜³åŒº',
                        'healthStatus': 'HEALTHY',
                        'totalVehicles': 50,
                        'activeVehicles': 45,
                    },
                    {
                        'id': 'site2',
                        'name': 'ä¸Šæµ·ç«™ç‚¹',
                        'location': 'ä¸Šæµ·å¸‚æµ¦ä¸œæ–°åŒº',
                        'healthStatus': 'WARNING',
                        'totalVehicles': 40,
                        'activeVehicles': 32,
                    }
                ]
            }
            self._set_headers()
            self.wfile.write(json.dumps(data).encode())
        
        elif self.path == '/api/ping':
            # å¿ƒè·³
            data = {
                'timestamp': datetime.now().isoformat(),
                'message': 'pong'
            }
            self._set_headers()
            self.wfile.write(json.dumps(data).encode())
        
        else:
            self._set_headers(404)
            self.wfile.write(json.dumps({'error': 'Not found'}).encode())

def run_server(port=8080):
    server = HTTPServer(('localhost', port), APIHandler)
    print("=" * 60)
    print("ğŸŒ REST API æœåŠ¡å™¨å¯åŠ¨æˆåŠŸï¼")
    print("=" * 60)
    print(f"ğŸ“¡ ç›‘å¬ç«¯å£: {port}")
    print(f"ğŸ”— åœ°å€: http://localhost:{port}")
    print()
    print("å¯ç”¨ API:")
    print(f"  GET http://localhost:{port}/api/health/statistics")
    print(f"  GET http://localhost:{port}/api/sites")
    print(f"  GET http://localhost:{port}/api/ping")
    print()
    print("âœ… æ— éœ€ä»£ç†ï¼Œæµè§ˆå™¨å¯ç›´æ¥è®¿é—®")
    print("æŒ‰ Ctrl+C åœæ­¢æœåŠ¡å™¨")
    print("=" * 60)
    
    try:
        server.serve_forever()
    except KeyboardInterrupt:
        print("\n\nğŸ›‘ æ­£åœ¨åœæ­¢æœåŠ¡å™¨...")
        server.shutdown()
        print("âœ“ æœåŠ¡å™¨å·²åœæ­¢")

if __name__ == '__main__':
    run_server()
